// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterItem should have same snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-egiyK hhJPHS"
  >
    <header
      class="sc-bqiRlB bLBhLX"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 300px; height: 300px; --highlight-color: #AAA;"
        >
          ‌
        </span>
        <br />
      </span>
    </header>
    <div
      class="sc-fFeiMQ bIjmor"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="--highlight-color: #AAA;"
        >
          ‌
        </span>
        <br />
        <span
          class="react-loading-skeleton"
          style="--highlight-color: #AAA;"
        >
          ‌
        </span>
        <br />
        <span
          class="react-loading-skeleton"
          style="--highlight-color: #AAA;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CharacterItem when passing valid values should have same snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-egiyK hhJPHS"
  >
    <header
      class="sc-bqiRlB bLBhLX"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 300px; height: 300px; --highlight-color: #AAA;"
        >
          ‌
        </span>
        <br />
      </span>
      <img
        class="sc-gsDKAQ hrqDZy"
        height="300"
        width="300"
      />
      <span
        class="sc-dkPtRN jkAsmV sc-ksdxgE idArhN"
        color="#444"
      >
        name
      </span>
    </header>
    <div
      class="sc-fFeiMQ bIjmor"
    >
      <div
        class="sc-hKwDye dodXuz"
      >
        <span
          class="sc-dkPtRN iBkRmY"
          color="#999"
        >
          Species
        </span>
        <span
          class="sc-dkPtRN uImFO sc-eCImPb gVHibD"
          color="teal"
        >
          species
        </span>
      </div>
      <div
        class="sc-hKwDye dodXuz"
      >
        <span
          class="sc-dkPtRN iBkRmY"
          color="#999"
        >
          Gender
        </span>
        <span
          class="sc-dkPtRN uImFO sc-eCImPb gVHibD"
          color="teal"
        >
          gender
        </span>
      </div>
      <div
        class="sc-hKwDye dodXuz"
      >
        <span
          class="sc-dkPtRN iBkRmY"
          color="#999"
        >
          Origin
        </span>
        <span
          class="sc-dkPtRN uImFO sc-eCImPb gVHibD"
          color="teal"
        >
          origin
        </span>
      </div>
    </div>
    <button
      class="sc-bdvvtL lbBTIY sc-fotOHu llQTdp"
      color="teal"
      data-testid="button"
    >
      Details
    </button>
  </div>
</DocumentFragment>
`;
